add configure extension functions for iris extension